Added config validation.

--- a/wildfire-detection.ipynb
+++ b/wildfire-detection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Mjölnir: Automated Brute-Force Combinatoric Training and Evaluation Pipeline for Datasets and Models - by Selman Tabet @ https://selman.io/"
+    "# Project Mjölnir: An Automated Brute-Force Combinatorics Training and Evaluation Pipeline for Datasets and Models - by Selman Tabet @ https://selman.io/"
    ]
   },
   {
@@ -53,7 +53,8 @@
     "from utils.dataset_processors import * # Dataset and generator processing functions\n",
     "from utils.plot_functions import * # Plotting functions\n",
     "from utils.evaluator import * # Complete evaluation program\n",
-    "from utils.initializer import * # Set temp path and other initializations"
+    "from utils.initializer import * # Set temp path and other initializations\n",
+    "from utils.cfg_validator import * # Validate config object"
    ]
   },
   {
@@ -69,23 +70,24 @@
     "            'train': path str to the training dataset ***(required)***,\n",
     "            'val': path str to the validation dataset (optional),\n",
     "            'test': path str to the test dataset (optional),\n",
+    "            'augment': bool to enable data augmentation on the training dataset (optional, default=True),\n",
     "        },\n",
     "        \"dataset_name2\": {}, # Keep adding datasets as needed\n",
     "        \"dataset_name3\": {},\n",
     "        ...\n",
     "    },\n",
-    "    'test': path str to the test dataset (optional, recommended),\n",
+    "    'full_test': path str to the test dataset (optional, recommended),\n",
     "    'val_size': float of the validation dataset to split (optional, default=0.2),\n",
     "    'keras_models': [list of instances of the keras.applications base models]\n",
     "    'custom_models': [list of instances of custom models, to be compiled without modification],\n",
-    "    'hyperparameters': {\n",
+    "    'hyperparameters': { ***(required)***\n",
     "        'batch_size': int ***(required)***,\n",
     "        'epochs': int ***(required)***,\n",
     "    },\n",
     "    'optimizer': instance of keras.optimizers.Optimizer or str ***(required)***,\n",
     "    'loss': instance of keras.losses.Loss or str ***(required)***,\n",
-    "    'image_width': int ***(required)***,\n",
-    "    'image_height': int ***(required)***,\n",
+    "    'image_width': int (optional, default=224),\n",
+    "    'image_height': int (optional, default=224),\n",
     "    'metrics': [list of metric functions] ***(required)***,\n",
     "    'callbacks': [list of instances of keras.callbacks.Callback] (optional),\n",
     "    'enforce_image_params': bool to force RGB color mode and image sizes according to above specs (optional)\n",
@@ -97,7 +99,7 @@
     "}\n",
     "\n",
     "```\n",
-    "The \"test\" configuration key is optional and is used to specify a test dataset that will be used to evaluate all models after training. If the \"test\" key is not provided, the pipeline will take the \"test\" paths provided under each dataset, then combine them to form a consolidated test set to evaluate all models with.\n",
+    "The \"full_test\" configuration key is optional and is used to specify a test dataset that will be used to evaluate all models after training. If the \"full_test\" key is not provided, the pipeline will take the \"test\" paths provided under each dataset, then combine them to form a consolidated test set to evaluate all models with.\n",
     "\n",
     "**Note: Ensure that the dataset classes are in separate folders and that the folder names are the class names. The pipeline will automatically detect the classes from the dataset paths.**"
    ]
@@ -142,7 +144,7 @@
     "default_cfg = {\n",
     "    \"datasets\": DATASETS,  # The datasets to use\n",
     "    # This overrides the test datasets stored under \"datasets\"\n",
-    "    \"test\": os.path.join(\"datasets\", \"d4_test\"),\n",
+    "    \"full_test\": os.path.join(\"datasets\", \"d4_test\"),\n",
     "    \"val_size\": 0.2,  # The size of the validation dataset if splitting is needed\n",
     "    \"keras_models\": [MobileNetV3Small, MobileNetV2, VGG19, ResNet50V2, Xception, DenseNet121],\n",
     "    \"custom_models\": [create_wildfire_model(224, 224)],  # Custom models to use\n",
@@ -184,26 +186,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Parse arguments from command line"
+    "### Parse arguments from command line and setup configuration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No Python config file specified, using default (notebook) config.\n"
+      "No Python config file specified, using default (notebook) config.\n",
+      "Validating config...\n",
+      "Found 1887 images belonging to 2 classes.\n",
+      "Found 1520 images belonging to 2 classes.\n",
+      "Found 999 images belonging to 2 classes.\n",
+      "Configuration validation successful.\n"
      ]
     }
    ],
    "source": [
-    "# Detect if script is running in a Jupyter notebook\n",
-    "# Generated using GPT-4o. Prompt: \"Detect if running in a Jupyter notebook\"\n",
     "def in_notebook():\n",
+    "    \"\"\" \n",
+    "    Detect if script is running in a Jupyter notebook\n",
+    "    Generated using GPT-4o. Prompt: \"Detect if running in a Jupyter notebook\"\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        shell = get_ipython().__class__.__name__\n",
     "        if shell == 'ZMQInteractiveShell':\n",
@@ -213,7 +222,6 @@
     "    except NameError:\n",
     "        return False      # Probably standard Python interpreter\n",
     "    \n",
-    "from_py = False # Flag to check if config was loaded from provided Python file\n",
     "parser = argparse.ArgumentParser(\n",
     "    description=\"Parse command line arguments\")\n",
     "parser.add_argument('--from-py-cfg', type=str,\n",
@@ -229,35 +237,57 @@
     "    spec = importlib.util.spec_from_file_location(\"config_module\", config_file_path)\n",
     "    config_module = importlib.util.module_from_spec(spec)\n",
     "    spec.loader.exec_module(config_module)\n",
-    "    config = config_module.cfg\n",
+    "    if hasattr(config_module, 'cfg'):\n",
+    "        config = config_module.cfg\n",
+    "    else:\n",
+    "        raise AttributeError(\"The provided config module does not have a 'cfg' attribute.\")\n",
     "    print(\"Loaded config from Python file:\")\n",
-    "    pprint(config)\n",
-    "    # Datasets, models, and hyperparameters are mandatory and must be processed now.\n",
-    "    training_datasets = config.get('datasets', {})\n",
-    "    full_test_dir = config.get('test')\n",
-    "    base_models = config.get('keras_models', [])\n",
-    "    custom_models = config.get('custom_models', [])\n",
-    "    hyperparameters = config.get('hyperparameters')\n",
-    "    default_hyperparameters = default_cfg.get('hyperparameters', {})\n",
-    "    metric_weights = config.get('metric_weights', {})\n",
-    "    if hyperparameters is None or len(hyperparameters) == 0:\n",
-    "        print(\"No training hyperparameters defined in config, using defaults defined above.\")\n",
-    "        hyperparameters = default_hyperparameters # Use default hyperparameters\n",
-    "    else: # Check for missing hyperparameters and fall back to defaults\n",
-    "        for key, value in default_hyperparameters.items():\n",
-    "            if key not in hyperparameters:\n",
-    "                print(f\"Missing hyperparameter - falling back to default {key}:{default_hyperparameters[key]}\")\n",
-    "                hyperparameters[key] = default_hyperparameters.get(key)\n",
-    "    from_py = True # Successfully completed the config import\n",
+    "    pprint(config)  \n",
     "else:\n",
     "    print(\"No Python config file specified, using default (notebook) config.\")\n",
-    "    config = default_cfg\n",
-    "    training_datasets = config.get('datasets', {})\n",
-    "    base_models = config.get('keras_models', [])\n",
-    "    custom_models = config.get('custom_models', [])\n",
-    "    hyperparameters = config.get('hyperparameters', {\"epochs\": 50, \"batch_size\": 32})\n",
-    "    full_test_dir = config.get('test')\n",
-    "    metric_weights = config.get('metric_weights', {})\n",
+    "    if 'default_cfg' in globals():\n",
+    "        config = default_cfg\n",
+    "    else:\n",
+    "        raise AttributeError(\"The notebook does not have a 'default_cfg' variable\")\n",
+    "\n",
+    "# Validate the config\n",
+    "print(\"Validating config...\")\n",
+    "validate_config(config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "trusted": true
+   },
+   "outputs": [],
+   "source": [
+    "# Load parameters from config\n",
+    "training_datasets = config.get('datasets', {})\n",
+    "full_test_dir = config.get('full_test')\n",
+    "base_models = config.get('keras_models', [])\n",
+    "custom_models = config.get('custom_models', [])\n",
+    "metric_weights = config.get('metric_weights', {})\n",
+    "hyperparameters = config.get('hyperparameters', {\"epochs\": 50, \"batch_size\": 32})\n",
+    "epochs = hyperparameters.get('epochs', 50)\n",
+    "batch_size = hyperparameters.get('batch_size', 32)\n",
+    "img_height = config.get('image_height', 224)\n",
+    "img_width = config.get('image_width', 224)\n",
+    "optimizer_fn = config.get('optimizer', 'adam')\n",
+    "loss_fn = config.get('loss', 'binary_crossentropy')\n",
+    "callbacks_list = config.get('callbacks', [])\n",
+    "metrics_list = config.get('metrics', ['accuracy'])\n",
+    "enforce_image_size = config.get('enforce_image_settings', False)\n",
+    "val_size = config.get('val_size', 0.2)\n",
+    "\n",
     "# Check if training datasets are defined\n",
     "if training_datasets is None or len(training_datasets) == 0:\n",
     "    raise ValueError(\"No train datasets defined in config.\")\n",
@@ -276,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "trusted": true
    },
@@ -294,47 +324,6 @@
     "all_models = base_models + custom_models\n",
     "# Create a list to keep track of which models are custom\n",
     "is_custom_model = [False] * len(base_models) + [True] * len(custom_models)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Setting parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "trusted": true
-   },
-   "outputs": [],
-   "source": [
-    "if from_py:\n",
-    "    # Load parameters from custom config script\n",
-    "    epochs = hyperparameters.get('epochs') # Guaranteed to be present\n",
-    "    batch_size = hyperparameters.get('batch_size') # Guaranteed to be present\n",
-    "    img_height = config.get('image_height', default_cfg.get('image_height'))\n",
-    "    img_width = config.get('image_width', default_cfg.get('image_width'))\n",
-    "    optimizer_fn = config.get('optimizer', default_cfg.get('optimizer'))\n",
-    "    loss_fn = config.get('loss', default_cfg.get('loss'))\n",
-    "    callbacks_list = config.get('callbacks', default_cfg.get('callbacks'))\n",
-    "    metrics_list = config.get('metrics', default_cfg.get('metrics'))\n",
-    "    enforce_image_size = config.get('enforce_image_settings', default_cfg.get('enforce_image_settings'))\n",
-    "    val_size = config.get('val_size', default_cfg.get('val_size'))\n",
-    "else:\n",
-    "    # Load parameters from default config object\n",
-    "    epochs = hyperparameters.get('epochs', 50)\n",
-    "    batch_size = hyperparameters.get('batch_size', 32)\n",
-    "    img_height = default_cfg.get('image_height', 224)\n",
-    "    img_width = default_cfg.get('image_width', 224)\n",
-    "    optimizer_fn = default_cfg.get('optimizer', 'adam')\n",
-    "    loss_fn = default_cfg.get('loss', 'binary_crossentropy')\n",
-    "    callbacks_list = default_cfg.get('callbacks', [])\n",
-    "    metrics_list = default_cfg.get('metrics', ['accuracy'])\n",
-    "    enforce_image_size = default_cfg.get('enforce_image_settings', False)\n",
-    "    val_size = default_cfg.get('val_size', 0.2)\n"
    ]
   },
   {
