--- a/project-mjolnir.ipynb
+++ b/project-mjolnir.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Mjölnir: An Automated Brute-Force Combinatorics Training and Evaluation Pipeline for Datasets and Models - by Selman Tabet @ https://selman.io/"
+    "# Project Mjölnir: An Automated Brute-Force Dataset-Model Combinatorics Training and Evaluation Pipeline for Computer Vision - by Selman Tabet @ https://selman.io/"
    ]
   },
   {
@@ -65,7 +65,7 @@
     "The configuration object is the most important part of the pipeline. It contains all the parameters that the pipeline will use to train and evaluate the models. The configuration object is a dictionary that MUST be named ***'default_cfg'***. The configuration object must contain the following:\n",
     "```python\n",
     "{\n",
-    "    'datasets': {\n",
+    "    'datasets': { ***(required)***\n",
     "        \"dataset_name1\": {\n",
     "            'train': path str to the training dataset ***(required)***,\n",
     "            'val': path str to the validation dataset (optional),\n",
@@ -479,6 +479,7 @@
     "        train_generator = create_generator(train_dir, batch_size=batch_size, augment=augment, img_width=img_width, img_height=img_height)\n",
     "        val_generator = create_generator(training_datasets[d]['val'], batch_size=batch_size, augment=False, shuffle=False, img_width=img_width, img_height=img_height)\n",
     "    else: # Split the training dataset into training and validation\n",
+    "        print(f\"No validation set provided for {d}, splitting training dataset.\")\n",
     "        train_generator, val_generator = create_split_generators(train_dir, val_size=val_size, batch_size=batch_size, augment=augment, img_width=img_width, img_height=img_height)\n",
     "\n",
     "    train_samples = train_generator.samples\n",
