--- a/project-mjolnir.ipynb
+++ b/project-mjolnir.ipynb
@@ -49,7 +49,7 @@
     "from pprint import pprint # To show config\n",
     "\n",
     "# Custom helper functions\n",
-    "from utils.img_processing import enforce_image_params\n",
+    "from utils.img_processors import enforce_image_params\n",
     "from utils.dataset_processors import * # Dataset and generator processing functions\n",
     "from utils.plot_functions import * # Plotting functions\n",
     "from utils.evaluator import * # Complete evaluation program\n",
