Fixed initial run.

--- a/project-mjolnir.ipynb
+++ b/project-mjolnir.ipynb
@@ -692,6 +692,9 @@
    },
    "outputs": [],
    "source": [
+    "if not os.path.exists(\"runs\"):\n",
+    "    os.makedirs(\"runs\")\n",
+    "\n",
     "run_number = len([d for d in os.listdir(\"runs\") if os.path.isdir(os.path.join(\"runs\", d)) and d.startswith('run_')]) + 1\n",
     "run_dir = os.path.join(\"runs\", f\"run_{run_number}\")\n",
     "os.makedirs(run_dir, exist_ok=True)"
