Minor annotation fix.

--- a/project-mjolnir.ipynb
+++ b/project-mjolnir.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "source": [
     "## Specify pipeline parameters here\n",
-    "The configuration object is the most important part of the pipeline. It contains all the parameters that the pipeline will use to train and evaluate the models. The configuration object is a dictionary that MUST be named ***'default_cfg'***. The configuration object must contain the following:\n",
+    "The configuration object is the most important part of the pipeline. It contains all the parameters that the pipeline will use to train and evaluate the models. The configuration object is a dictionary that MUST be named ***'default_cfg'***. The configuration object is defined as follows:\n",
     "```python\n",
     "{\n",
     "    'datasets': { ***(required)***\n",
